using System.Runtime.CompilerServices;
using CollectManagement.Domain.Common;
using CollectManagement.Domain.Societes;
using CollectManagement.Domain.Societes.ValueObjects;
using CollectManagement.Domain.Utilisateurs.Entities;
using CollectManagement.Domain.Utilisateurs.Enums;
using CollectManagement.Domain.Utilisateurs.ValueObjects;

namespace CollectManagement.Domain.Utilisateurs;

public sealed class Utilisateur : AuditableEntity, ITenantEntity
{
    private readonly List<UtilisateurSite> _sites = [];

   public UtilisateurId UtilisateurId { get; private set; }
    public string NomUtilisateur { get; private set; }
    public string Nom { get; private set; }
    public string Prenom { get; private set; }
    public string Email { get; private set; }
    public string Password { get; private set; }

    public RoleUtilisateurId? RoleUtilisateurId { get; private set; }
    
    public RoleUtilisateur? RoleUtilisateur { get; private set; }
    
    public bool IsActive { get; private set; } = true;
    
    public string? VerificationCode { get; private set; }
    public string? ApprovalToken { get; private set; }
    
    public SocieteId SocieteId { get; private set; } // Clé étrangère
    public Societe? Societe { get; private set; }    // Navigation Property

    public IEnumerable<UtilisateurSite> Sites => _sites;

      private Utilisateur(UtilisateurId utilisateurId,
        string nomUtilisateur,
        string nom,
        string prenom,
        string email,
        string password,
        RoleUtilisateurId? roleUtilisateurId,
        bool isActive,
        SocieteId societeId)
    {
        UtilisateurId = utilisateurId;
        NomUtilisateur = nomUtilisateur;
        Nom = nom;
        Prenom = prenom;
        Email = email;
        Password = password;
        RoleUtilisateurId = roleUtilisateurId;
        IsActive = isActive;
        SocieteId = societeId;
    }

    public static Utilisateur QueryCreate(
        UtilisateurId utilisateurId,
        string nomUtilisateur,
        string nom,
        string prenom,
        string email,
        string password,
        RoleUtilisateurId? roleUtilisateurId,
        bool isActive,
        SocieteId societeId,
        List<UtilisateurSite> sites = null)
    {
        var utilisateur = new Utilisateur(
            utilisateurId: utilisateurId,
            nomUtilisateur: nomUtilisateur,
            nom: nom,
            prenom: prenom,
            email: email,
            password: password,
            roleUtilisateurId: roleUtilisateurId,
            isActive: isActive,
            societeId:societeId);

        if (sites != null)
        {
            utilisateur.UpdateSites(sites);
        }

        return utilisateur;
    }

    public static Utilisateur Create(UtilisateurId utilisateurId,
        string nomUtilisateur,
        string nom,
        string prenom,
        string email,
        string password,
        RoleUtilisateurId? roleUtilisateurId,
        bool isActive,
        SocieteId societeId)
    {
        return new Utilisateur(
            utilisateurId: utilisateurId,
            nomUtilisateur: nomUtilisateur,
            nom: nom,
            prenom: prenom,
            email: email,
            password: password,
            roleUtilisateurId: roleUtilisateurId,
            isActive: isActive,
            societeId:societeId);
    }

    public void Update(
        string nomUtilisateur,
        string nom,
        string prenom,
        string email,
        string password,
        RoleUtilisateurId? roleUtilisateurId,
        bool isActive,
        SocieteId societeId)
    {
        NomUtilisateur = nomUtilisateur;
        Nom = nom;
        Prenom = prenom;
        Email = email;
        Password =  password;
        RoleUtilisateurId = roleUtilisateurId;
        IsActive = isActive;
        SocieteId = societeId;
    }

    public void Update(RoleUtilisateur roleUtilisateur)
    {
        RoleUtilisateur = roleUtilisateur;
    }

    public void UpdateSites(List<UtilisateurSite> sites)
    {
        _sites.Clear();
        _sites.AddRange(sites);
    }

    public void SetVerificationCode(string code)
    {
        VerificationCode = code;
    }

    public void ClearVerificationCode()
    {
        VerificationCode = null;
    }

    public void SetApprovalToken(string token)
    {
        ApprovalToken = token;
    }

    public void ClearApprovalToken()
    {
        ApprovalToken = null;
    }

#pragma warning disable CS8618 // Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
    private Utilisateur() { }
#pragma warning restore CS8618 // Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
}
